--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "rtl-md",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple markdown to html converter which knows the direction!",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register test/index.js"
+    "build": "babel src --out-dir dist",
+    "lint": "eslint src test",
+    "test": "npm run build && mocha --compilers js:babel-core/register test/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mamal72/rtl-md.git"
@@ -23,24 +28,25 @@
   },
   "homepage": "https://github.com/mamal72/rtl-md#readme",
   "dependencies": {
-    "cheerio": "^0.19.0",
+    "cheerio": "^0.20.0",
     "html-entities": "^1.2.0",
     "marked": "^0.3.5"
   },
   "devDependencies": {
-    "babel-core": "^6.3.21",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "chai": "^3.4.1",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.1.1",
-    "grunt": "^0.4.5",
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "eslint": "^2.11.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-eslint": "^17.3.1",
-    "load-grunt-tasks": "^3.4.0",
-    "mocha": "^2.3.4"
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-eslint": "^18.1.0",
+    "load-grunt-tasks": "^3.5.0",
+    "mocha": "^2.5.3"
   }
 }
